--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220302102302">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220302135300">
     <title>Main</title>
 </head>
     <body>
@@ -14,21 +14,16 @@
         <main>
             <div class="container">
                 <form action="" class="questions__form">
-                    <!-- <div class="questions">
-                        <p class="question">Man patīk sistematizēt informāciju noteiktā kārtībā </p>
-                        <div class="answers">
-                            <input type="radio" value="yes" id="answerYes" name="question">
-                            <label for="answerYes">YES</label>
-                            <input type="radio" value="no" id="answerNo" name="question">
-                            <label for="answerNo">NO</label>
-                        </div>
-                    </div> -->
-                    <button class="submit" type="submit">Submit</button>
                 </form>
                 <pre id="log"></pre>
             </div>
+            <div class="container">
+                <form action="" class="questions__formTwo">
+                </form>
+                <pre id="log2"></pre>
+            </div>
         </main>
         <footer></footer>
-        <script src='js/app.min.js?_v=20220302102302'></script>
+        <script src='js/app.min.js?_v=20220302135300'></script>
     </body>
 </html>
