--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,7 @@
                 </form>
                 <pre id="log"></pre>
             </div>
-            <a href="#" class="results">Submit Results</a>
-            <div class="container">
-                <div class="cards">
-                    <div class="cards__item">
-                        <img src="" alt="" class="cards__item-image">
-                        <h3 class="cards__item-title">Bioloģijas fakultāte</h3>
-                        <p class="cards__item-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        </p>
-                        <a href="" class="cards__item-button">uzzināt vairāk</a>
-                    </div>
-                </div>
-            </div>
+            <!-- <a href="#" class="results">Submit Results</a> -->
         </main>
         
         @@include('html/footer.html',{})
